<resources>
    <string name="app_name">DummyJSONApp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="show_products">Show products</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_basic">BasicActivity</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="products_fragment_label">Products Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
    <string name="discount">Discount percentage</string>
    <string name="rating">Rating</string>
    <string name="stock">Stock</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
</resources>