<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <TextView
            android:id="@+id/product_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <TextView
            android:id="@+id/product_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/product_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>